AppVeyor Publish: 5e516d45ba36c1ea4b5a8e31ab487c49bd30f71d Merge pull request #8 from marco-bertschi/topic/initial_code_commit
(GH-9) Initial code commit

--- a/assets/css/override.css
+++ b/assets/css/override.css
@@ -128,3 +128,18 @@ pre:hover .btn-copy {
 .github-button a:focus {
   color: #fff;
 }
+/* For feature list */
+
+.feature-list li {
+  display: block;
+}
+.feature-list li:before {
+  /*Using a Bootstrap glyphicon as the bullet point*/
+  content: "\e013";
+  font-family: 'Glyphicons Halflings';
+  font-size: 12px;
+  float: left;
+  margin-top: 1px;
+  margin-left: -25px;
+  color: green;
+}
